
350) Sudo now locks its log file to prevent mangled entries.

351) Visudo now locks the sudoers temp file instead of bailing when
     the temp file already exists.  This fixes the problem of stale
     temp files but it does *require* that you not try to put the
     temp file in a world-writable directory.  This shoud not be
     an issue as the temp file should live in the same dir as sudoers.

352) Fixed crypt() check in libufc.

353) It is now possible to put a list of users as the first thing in a
     user specification.  I don't suggest ths but it makes the grammar
     more uniform.

354) Visudo will now warn about what it thinks are undefined aliases.
     Since it can't be 100% sure these are just warnings, not errors.

355) Add a --without-passwd option to configure that turns off
     passwd/shadow file authentication.  Only usable with an alternate
     authentication scheme.

356) Add a --disable-authentication option to configure that causes sudo
     to not require authentication by default.  The PASSWD tag can be
     used to require authentication for an entry.

357) Add a --with-devel option to add -Wall and uncomment yacc/lex
     generation in Makefile.

358) Zero out plaintext password after use (should do encrypted as well).

359) Added real dependencies in Makefile.

360) Deprecated --with-otp-only in favor of --without-passwd.

361) Add --with-mail-if-no-host to send mail if a user tries to run sudo on
     a host for which he/she is not authorized.

362) Most of sudo now runs as root instead of the invoking user to
     minimize the possibility of user control via signals or tracing.

363) Now Support CIDR-style netmasks (ie: 128.138.0.0/16).

364) In "sudo -l" mode, the type of the stored (expanded) alias was not
     stored with the contents.  This could lead to incorrect output
     if the sudoers file had different alias types with the same name.
     Normal parsing (ie: not in '-l' mode) is unaffected.