@@ -35,11 +35,11 @@ Sudo is distributed under the following BSD-style license:
  * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-Additionally, lsearch.c, fnmatch.c, getcwd.c, snprintf.c and fnmatch.3 bear
-the following UCB license:
+Additionally, lsearch.c, fnmatch.c, getcwd.c, snprintf.c, strcasecmp.c
+and fnmatch.3 bear the following UCB license:
 
 /*
- * Copyright (c) 1989, 1990, 1991, 1993, 1994
+ * Copyright (c) 1987, 1989, 1990, 1991, 1993, 1994
  *	The Regents of the University of California.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
